# linea

./: .travis.yml  MANIFEST.in  README.rst  build_example.ipynb  reduce_example.ipynb  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  paper.bib  paper.md
docs/linea/: background.rst  eclipse.rst  gettingstarted.rst  index.rst  installation.rst  phasecurve.rst
example/: 55Cnce_build.ipynb  55Cnce_reduce.ipynb  WASP-189_build.ipynb  WASP-189_reduce.ipynb
linea/: __init__.py  core.py  linalg.py  planets.py
linea/data/: example.fits  example_wasp189_visit0.fits  example_wasp189_visit1.fits  example_wasp189_visit2.fits  example_wasp189_visit3.fits  planets.json
linea/tests/: test_core.py  test_core_eclipse.py  test_core_phase_curve.py
