[metadata]
name = linea
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/linea
description = Linear detrending for CHEOPS
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bmorris3/linea

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    batman-package

[options.package_data]
linea = data/*

[tool:pytest]
testpaths = "linea" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    linea/_astropy_init*
    linea/conftest.py
    linea/*setup_package*
    linea/tests/*
    linea/*/tests/*
    linea/extern/*
    linea/version*
    */linea/_astropy_init*
    */linea/conftest.py
    */linea/*setup_package*
    */linea/tests/*
    */linea/*/tests/*
    */linea/extern/*
    */linea/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
